# my_app

./: .env
backend/: Dockerfile  pyproject.toml  run.py  run.sh
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: masks.py  projects.py  tasks.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  crud_mask.py  crud_project.py  crud_task.py
backend/app/db/: base_class.py  init_db.py
backend/app/models/: mask.py  project.py  task.py
backend/app/schemas/: User.py  mask.py  project.py  task.py
backend/app/tests/: conftest.py
backend/app/tests/api/api_v1/: test_projects.py
backend/app/utils/: project.py
frontend/app/: package-lock.json  package.json
frontend/app/public/: index.html
frontend/app/src/: App.vue  main.js
frontend/app/src/components/: NavBar.vue  ProjectItem.vue  ProjectList.vue  TaskItem.vue  TaskList.vue  ToolBar.vue
frontend/app/src/router/: router.js
frontend/app/src/views/: EditTab.vue  InspectTab.vue  ProjectsTab.vue  TasksTab.vue  ViewTab.vue
